fix: Set correct SDPX license expression; Add z-index base value for component; Set correct peerDep

--- a/src/components/CookieCompliancePopup.scss
+++ b/src/components/CookieCompliancePopup.scss
@@ -24,6 +24,7 @@ $screen-md: 720px;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 200;
 
   &__hidden {
     animation: slide 1s;
